# mini-downloader

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PRIVACY.md  README.md  compose.yaml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  release.yml
apps/desktop/: .npmrc  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
apps/desktop/src/: App.svelte  DetailPanel.svelte  DownloadRow.svelte  LinkGrabber.svelte  MediaGrab.svelte  PackageGroup.svelte  Settings.svelte  Sidebar.svelte  api.ts  app.css  fonts.css  main.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/scripts/: postinstall.sh  postremove.sh
apps/desktop/src-tauri/src/: clipboard.rs  commands.rs  engine.rs  errors.rs  events.rs  extinstall.rs  ingest.rs  lib.rs  nativehost.rs  scheduler.rs  state.rs  sync.rs  tray.rs  updater.rs  window.rs  ytdlp.rs
apps/desktop/src/lib/: a11y.ts  icons.ts
apps/desktop/src/locales/: ar.ts  de.ts  en.ts  es.ts  fr.ts  ja.ts  ko.ts  ru.ts  tr.ts  zh.ts
crates/ldm-core/: Cargo.toml
crates/ldm-core/src/: aria2.rs  categories.rs  db.rs  lib.rs  model.rs  paths.rs
crates/ldm-core/src/aria2/: mod.rs  options.rs  process.rs
crates/ldm-core/tests/: engine_e2e.rs
crates/ldm-ipc/: Cargo.toml
crates/ldm-ipc/src/: lib.rs
crates/ldm-native-host/: Cargo.toml
crates/ldm-native-host/src/: main.rs
crates/minidl-core/: Cargo.toml
crates/minidl-core/src/: categories.rs  db.rs  grabber.rs  lib.rs  model.rs  paths.rs  ytdlp.rs
crates/minidl-core/src/aria2/: mod.rs  notify.rs  options.rs  process.rs  rpc.rs  sandbox.rs
crates/minidl-core/tests/: engine_e2e.rs
crates/minidl-ipc/: Cargo.toml
crates/minidl-ipc/src/: lib.rs
crates/minidl-native-host/: Cargo.toml
crates/minidl-native-host/src/: main.rs
extension/: background.js  content.js  i18n.js  manifest.chrome.json  manifest.json  options.html  options.js  popup.html  popup.js  ui.css
extension/_locales/ar/: messages.json
extension/_locales/de/: messages.json
extension/_locales/en/: messages.json
extension/_locales/es/: messages.json
extension/_locales/fr/: messages.json
extension/_locales/ja/: messages.json
extension/_locales/ko/: messages.json
extension/_locales/ru/: messages.json
extension/_locales/tr/: messages.json
extension/_locales/zh/: messages.json
packaging/: README.md  com.ldm.host.json  com.minidownloader.host.json
packaging/aur/: README.md
packaging/aur/mini-downloader/: .SRCINFO  PKGBUILD
packaging/aur/mini-downloader-bin/: .SRCINFO  PKGBUILD
packaging/aur/mini-downloader-git/: .SRCINFO  PKGBUILD
packaging/aur/mini-downloader/src/mini-downloader-0.2.0/: Dockerfile
packaging/aur/mini-downloader/src/mini-downloader-0.2.0/.github/: FUNDING.yml
packaging/aur/mini-downloader/src/mini-downloader-0.2.0/apps/desktop/: index.html  package.json  vite.config.ts
packaging/aur/mini-downloader/src/mini-downloader-0.2.0/apps/desktop/src/: DownloadRow.svelte  LinkGrabber.svelte  Sidebar.svelte  app.css  types.ts
packaging/aur/mini-downloader/src/mini-downloader-0.2.0/apps/desktop/src-tauri/: Cargo.toml  tauri.windows.conf.json
packaging/aur/mini-downloader/src/mini-downloader-0.2.0/apps/desktop/src-tauri/scripts/: postremove.sh
packaging/aur/mini-downloader/src/mini-downloader-0.2.0/apps/desktop/src-tauri/src/: clipboard.rs  commands.rs  lib.rs  nativehost.rs  scheduler.rs  state.rs  tray.rs
packaging/aur/mini-downloader/src/mini-downloader-0.2.0/apps/desktop/src/lib/: Icon.svelte  i18n.svelte.ts
packaging/aur/mini-downloader/src/mini-downloader-0.2.0/apps/desktop/src/locales/: ar.ts  en.ts  fr.ts  ja.ts  ru.ts  tr.ts  zh.ts
packaging/aur/mini-downloader/src/mini-downloader-0.2.0/crates/minidl-core/src/: categories.rs  db.rs  i18n.rs  model.rs
packaging/aur/mini-downloader/src/mini-downloader-0.2.0/crates/minidl-core/src/aria2/: event.rs  notify.rs  options.rs  process.rs  rpc.rs
packaging/aur/mini-downloader/src/mini-downloader-0.2.0/crates/minidl-core/tests/: engine_e2e.rs
packaging/aur/mini-downloader/src/mini-downloader-0.2.0/crates/minidl-native-host/src/: main.rs
packaging/aur/mini-downloader/src/mini-downloader-0.2.0/extension/: content.js  i18n.js  manifest.json  options.html  options.js  popup.html
packaging/aur/mini-downloader/src/mini-downloader-0.2.0/extension/_locales/de/: messages.json
packaging/aur/mini-downloader/src/mini-downloader-0.2.0/extension/_locales/en/: messages.json
packaging/aur/mini-downloader/src/mini-downloader-0.2.0/extension/_locales/es/: messages.json
packaging/aur/mini-downloader/src/mini-downloader-0.2.0/extension/_locales/fr/: messages.json
packaging/aur/mini-downloader/src/mini-downloader-0.2.0/extension/_locales/ko/: messages.json
packaging/aur/mini-downloader/src/mini-downloader-0.2.0/extension/_locales/ru/: messages.json
packaging/aur/mini-downloader/src/mini-downloader-0.2.0/extension/_locales/zh/: messages.json
packaging/aur/mini-downloader/src/mini-downloader-0.2.0/packaging/: README.md  chrome-extension-id.txt
packaging/aur/mini-downloader/src/mini-downloader-0.2.0/packaging/aur/: README.md
packaging/aur/mini-downloader/src/mini-downloader-0.2.0/packaging/aur/mini-downloader/: PKGBUILD
packaging/aur/mini-downloader/src/mini-downloader-0.2.0/scripts/: build-extension.sh
scripts/: EXTENSION-PUBLISHING.md  UPDATER.md  build-extension.sh  bump-version.sh  install-arch.sh  stage-sidecars.sh
