[workspace]
resolver = "2"
members = [
    "crates/ldm-ipc",
    "crates/ldm-core",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["RamazanBerk20 <ramazanberksirin@protonmail.com>"]
repository = "https://github.com/RamazanBerk20/linux-download-manager"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "process"] }
anyhow = "1"
thiserror = "2"

[profile.release]
strip = true
lto = "thin"
