[workspace]
resolver = "2"
members = [
    "crates/minidl-ipc",
    "crates/minidl-core",
    "crates/minidl-native-host",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "1.1.1"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["RamazanBerk20 <ramazanberksirin@protonmail.com>"]
repository = "https://github.com/RamazanBerk20/mini-downloader"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "process"] }
anyhow = "1"
thiserror = "2"
# Cross-platform (Linux + Windows) building blocks.
dirs = "5"
getrandom = "0.2"
interprocess = { version = "2", features = ["tokio"] }

[profile.release]
strip = true
lto = "thin"
