[package]
name = "ldm-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true

# Shared contract between the Firefox native-host bridge, the native-host binary,
# and the Tauri app. Keep dependencies minimal — this crate is linked by the tiny
# native-host binary, which must start fast and stay small.
[dependencies]
serde = { workspace = true }
