[package]
name = "minidl-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mini Downloader"

[lib]
# Keep the lib name stable (referenced by main.rs). The `_lib` suffix avoids a
# name clash with the binary on Windows.
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-deep-link = "2"
base64 = "0.22"
chrono = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
minidl-core = { path = "../../../crates/minidl-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "net", "io-util", "process"] }
interprocess = { workspace = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
